--- a/indie.html
+++ b/indie.html
@@ -4,9 +4,8 @@
   <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
   <meta http-equiv='X-UA-Compatible' content='ie=edge'/>
   <title>Document</title>
-  
-  <link rel='stylesheet' href='index.css'/>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <script src='./scriptie.js'></script>
+  <link rel='stylesheet' href='./stylie.css'/>
 </head>
 <body>
   <div id='main'>
@@ -14,11 +13,11 @@
     <h2>GitHub Search</h2>
 
     <form id='github-form'>
-      <input id='search' type='text' name='search' placeholder="search git username">
+      <input id='search' type='text' name='search'>
       <input type='submit' name='submit'/>
     </form>
 
-    <div id='githubcontainer'>
+    <div id='github-container'>
       <ul id='user-list'>
 
       </ul>
@@ -29,7 +28,6 @@
     </div>
 
   </div>
-  <script src='js/index.js'></script>
 
 </body>
 </html>
